@@ -14,6 +14,10 @@
     * libseahorse/seahorse-pgp-key.h:
     * libseahorse/seahorse-prefs.c:
     * libseahorse/seahorse-util.c: Fix compilation warnings
+    * libseahorse/seahorse-key.c:
+    * libseahorse/seahorse-key.h:
+    * src/seahorse-key-manager.c:
+    * src/seahorse-key-manager.glade: Add 'trusted keys' tab
     
 2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
 
